# Trace

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  analyse.md  docker-compose.yml  plan.md
backend/: Dockerfile  alembic.ini  llm.config.example.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/agents/: llm.py  (+15 more)
backend/docker/: entrypoint.sh
backend/scripts/: init_db.py  mutation_discovery_audit.py  run_api.py  run_worker.py  seed_eval_demo.py  seed_strategies.py  smoke_async_run.py  spawn_dev_services.py
backend/sql/: init_v1.sql
backend/tests/: conftest.py  test_analyze.py  test_api_async_run.py  test_api_local.py  test_api_retry_cancel.py  test_api_strategy_versions.py  test_api_sync_run.py  test_artifact_cleanup.py  test_ast_grep_search.py  test_celery_app.py  test_context_builder_guard_inputs.py  test_contract_guard.py  test_db_models.py  test_e2e_mockllm.py  test_eval_dataset.py  test_eval_harness.py  test_evaluation_events.py  test_executor_rootdir.py  test_executor_runtime_command.py  test_generation_prompt_context.py  test_generation_retry_prompt.py  test_llm_openai.py  test_llm_openai_chat_compat.py  test_llm_options_api.py  test_llm_runtime_config.py  test_lsp_definition.py  test_lsp_references.py  test_m1_foundation.py  test_mutation_discovery.py  test_plan_execute_targets.py  test_reflection_prompt_context.py  test_replay_scheduler.py  test_report_sqlalchemy.py  test_rg_search.py  test_run_pytest.py  test_schema_migrations.py  test_source_context.py  test_sqlalchemy_recorder.py  (+7 more)
(+220 files in other folders)
