[project]
name = "trace-backend"
version = "0.1.0"
description = "TRACE backend (V1) —— 面向 Python/FastAPI 的测试生成 Agent"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "fastapi",
    "httpx",
    "pytest",
    "pyyaml",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "celery",
    "redis",
    "uvicorn",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# A 的端到端测试会生成临时 pytest 文件并子进程执行，主测试套件只扫 tests/
